sandbox/output
StringCalculator.java:16: error: invalid method declaration; return type required
    private static addAll(String... inputs){
                   ^
1 error
